Fix cannot scroll to top on iphone

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         }
         @media screen and (max-width: 576px) {
             html, body {
-                scroll-snap-type: y mandatory;
+                scroll-snap-type: y proximity;
             }
             .menu-group {
                 top: -250px;
