--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         }
         @media screen and (max-width: 576px) {
             html, body {
-                scroll-snap-type: y;
+                scroll-snap-type: y mandatory;
             }
             .menu-group {
                 top: -250px;
