Change 'try button' url

--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
             <div class="container">
                 <div class="title">
                     <h1>โปรแกรมบริหารคลินิคที่คุณตามหา</h1>
-                    <a href="https://clinic.zarewoft.com/register" class="filled-button">ทดลองใช้งาน</a>
+                    <a href="https://clinic.polary.app/register" class="filled-button">ทดลองใช้งาน</a>
+                    <span>
                 </div>
                 <img class="image" src="./assets/member_screenshot.png" alt="หน้าต่างข้อมูลคนไข้" srcset="">
             </div>
