(12) add contact us section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Polary</title>
-  <link rel="stylesheet" href="/assets/index.61c8c069.css">
+  <link rel="stylesheet" href="/assets/index.4ac30866.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
       </div>
 
       <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_3bctaz0q.json" mode="bounce"
-        background="transparent" speed="1" loop autoplay class="h-full w-fit absolute -right-28 -bottom-40">
+        background="transparent" speed="1" loop autoplay class="h-full w-1/2 absolute -right-28 -bottom-40">
       </lottie-player>
     </div>
   </div>
@@ -46,7 +46,7 @@
           <div class="relative h-24 flex justify-center">
             <img src="/assets/Mascot l Polary.c936ba19.svg" class="absolute w-40 top-7">
           </div>
-          <div class="rounded-xl shadow-sm px-8 py-5 bg-white relative">
+          <div class="rounded-xl card px-8 py-5 bg-white relative">
             <div></div>
             <h1 class="text-5xl font-medium mb-6 leading-normal">2,800+</h1>
             <h4 class="text-2xl font-medium text-primary leading-normal">จำนวนคนไข้และลูกค้าที่ดูแลทั้งหมดในระบบ</h4>
@@ -57,7 +57,7 @@
           <div class="relative h-24 flex justify-center">
             <img src="/assets/Mascot l Polary.c936ba19.svg" class="absolute w-40 top-7">
           </div>
-          <div class="rounded-xl shadow-sm px-8 py-5 bg-white relative">
+          <div class="rounded-xl card px-8 py-5 bg-white relative">
             <div></div>
             <h1 class="text-5xl font-medium mb-6 leading-normal">32+</h1>
             <h4 class="text-2xl font-medium text-primary leading-normal">จำนวนคลีนิคที่ใช้บริการ Polary</h4>
@@ -143,8 +143,8 @@
       </div>
     </div>
   </div>
-  <div class="section bg-section-light-gray mb-12 ">
-    <div class="container relative overflow-clip">
+  <div class="section bg-section-light-gray mb-12 overflow-clip">
+    <div class="container relative">
       <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute -top-10">
       <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute -bottom-8 left-28">
       <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute bottom-1/2 left-1/3">
@@ -162,22 +162,111 @@
       </div>
     </div>
   </div>
-  <div class="section bg-gradient-to-r from-gradient-light-green to-gradient-dark-green mb-12">
+  <div class="section bg-gradient-to-r from-gradient-light-green to-gradient-dark-green">
     <div class="container">
       <div class="feature pb-20">
         <div class="header">
           <h4 class="text-xl leading-normal font-medium text-white opacity-60">ภาพตัวอย่างโปรแกรม</h4>
         </div>
         <div class="w-12 h-px bg-white opacity-60 mt-8 mb-3"></div>
-        <div class="split vertical">
-          <div class="detail">
-            <h1 class="title white">Polary หน้าสมาชิก</h1>
-            <p class="description white">แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ Polary ทั้งหมด</p>
+        <div class="overflow-y-hidden overflow-x-auto flex scroll-smooth snap-x snap-mandatory">
+          <div class="split vertical min-w-full snap-start">
+            <div class="detail">
+              <h1 class="title white">Polary หน้าสมาชิก</h1>
+              <p class="description white">แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ Polary ทั้งหมด</p>
+            </div>
+            <div class="relative">
+
+            </div>
+          </div>
+          <div class="split vertical min-w-full snap-start">
+            <div class="detail">
+              <h1 class="title white">Polary หน้าสมาชิก</h1>
+              <p class="description white">แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ Polary ทั้งหมด</p>
+            </div>
+            <div class="relative">
+
+            </div>
+          </div>
+          <div class="split vertical min-w-full snap-start">
+            <div class="detail">
+              <h1 class="title white">Polary หน้าสมาชิก</h1>
+              <p class="description white">แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ Polary ทั้งหมด</p>
+            </div>
+            <div class="relative">
+
+            </div>
+          </div>
+          <div class="split vertical min-w-full snap-start">
+            <div class="detail">
+              <h1 class="title white">Polary หน้าสมาชิก</h1>
+              <p class="description white">แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ Polary ทั้งหมด</p>
+            </div>
+            <div class="relative">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <div class="section bg-section-light-gray overflow-clip">
+    <div class="container relative">
+      <div class="feature pb-20">
+        <div class="rounded-[14px] card divide-y divide-[#F1F1F1]">
+          <div class="split vertical justify-between py-11 px-14">
+            <div class="price">
+              <span class="title">699</span>
+              <span class="unit">บาท/เดือน</span>
+              <h3 class="description">ราคาเดียวครบทุกฟีเจอร์</h3>
+            </div>
+            <div class="flex flex-col space-y-5">
+              <a href="" class="button filled rounded primary">สมัครเลย</a>
+              <a href="" class="button filled white rounded bordered">ทดลองใช้งานฟรี</a>
+            </div>
+          </div>
+          <div class="flex py-11 px-14 flex-wrap gap-y-4 text-base text-dark-gray">
+            <span class="w-1/3">บันทึกข้อมูลคนไข้</span>
+            <span class="w-1/3">รายชื่อบุคคลากร</span>
+            <span class="w-1/3">รายงานยอดขายและการบริการ</span>
+            <span class="w-1/3">บันทึกประวัติการรักษา</span>
+            <span class="w-1/3">Point of Sale (POS)</span>
+            <span class="w-1/3">รายงานการรักษา</span>
+            <span class="w-1/3">ตารางนัดหมาย</span>
+            <span class="w-1/3">รายงานคนไข้และการใช้บริการ</span>
+            <span class="w-1/3">สรุปรายงานในแบบเอกสาร</span>
+            <span class="w-1/3">รายการสินค้าและบริการ</span>
+            <span class="w-1/3">รายงานบุคคลากร</span>
+            <span class="w-1/3">เชื่อมต่อ API</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section bg-section-light-gray overflow-clip">
+    <div class="container split vertical">
+      <div class="w-1/3 h-[671px]"></div>
+      <div class="py-14 px-28 flex-1">
+        <h4 class="h4 mb-9">ติดต่อเราได้ทุกเมื่อ</h4>
+        <div class="space-y-3 mb-6">
+          <div class="label">ชื่อ</div>
+          <input type="text" name="" id=""
+            class="bg-white border border-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray">
+        </div>
+        <div class="space-y-3 mb-6">
+          <div class="label">อีเมล์ติดต่อกลับ</div>
+          <input type="email" name="" id=""
+            class="bg-white border border-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray">
+        </div>
+        <div class="space-y-3 mb-8">
+          <div class="label">ข้อความ</div>
+          <textarea name="" id="" cols="30" rows="10"
+            class="bg-white border border-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray"></textarea>
+        </div>
+        <button class="filled button rounded primary w-52">ส่งข้อความ</button>
+      </div>
+    </div>
+  </div>
+  <footer class="bg-[#303030] h-20"> </footer>
 </body>
 
 </html>
