--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,13 +9,36 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Polary</title>
-  <link rel="stylesheet" href="/assets/index.4ac30866.css">
+  <script>
+    window.addEventListener('scroll', function (e) {
+      let nav = document.querySelector('nav')
+      let scrollTop = e.target.scrollingElement.scrollTop || e.target.scrollTop || 0
+      let diff = 255 - scrollTop
+      if (diff < 0) {
+        nav.style.backgroundColor = '#1BD1D5'
+        return
+      }
+      nav.style.backgroundColor = '#1BD1D5' + scrollTop.toString(16)
+    })
+  </script>
+  <link rel="stylesheet" href="/assets/index.88b5c144.css">
 </head>
 
 <body>
-  <nav class="sticky"></nav>
-  <div class="bg-primary pt-[60px] pb-16 overflow-clip">
-    <div class="max-w-7xl relative mx-auto pt-[130px]">
+  <nav class="sticky top-0 z-50 ">
+    <div class="container flex justify-between h-[60px]">
+      <img src="/assets/polary_logo.d382e075.svg" alt="Polary logo" class="py-3">
+      <div class="flow space-x-12 text-white text-lg font-medium self-center">
+        <a href="#feature">คุณสมบัติ</a>
+        <a href="#price">ราคา</a>
+        <a href="#contact">ติดต่อ</a>
+        <a href="#login">เข้าสู่ระบบ</a>
+        <a href="#register" class="button rounded white filled slim">ลงทะเบียน</a>
+      </div>
+    </div>
+  </nav>
+  <div class="bg-primary pt-[60px] pb-16 overflow-clip -mt-[60px]">
+    <div class="container relative pt-[130px]">
       <svg class="absolute right-0 top-0" width="570" height="570" viewBox="0 0 570 570" fill="none"
         xmlns="http://www.w3.org/2000/svg">
         <circle opacity="0.500046" cx="285" cy="285" r="285" fill="#11C1C4" />
@@ -24,14 +47,16 @@
         xmlns="http://www.w3.org/2000/svg">
         <circle opacity="0.500046" cx="285" cy="285" r="285" fill="#11C1C4" />
       </svg>
-      <div class="ml-16 w-1/2 relative">
+      <div class="w-1/2 relative">
         <h1 class="text-5xl leading-normal text-white">ระบบบริหารจัดการคลีนิค<br>ที่ครบครันและสะดวกสบาย</h1>
         <p class="text-white text-xl leading-normal mt-4 mb-8">Polary
           คือระบบบริหารจัดการคลีนิคแบบครบวงจรที่ครอบคลุมทุกการใช้งาน
           เพือให้คลีนิคสามารถบริหารและส่งมอบบริการได้อย่างมีประสิทธิภาพโดยไม่กังวลถึงระบบการทำงานด้านหลัง</p>
         <a href="#" class="button rounded filled white">ทดลองใช้ฟรี</a>
-        <div class="w-10 h-10 mt-24 mb-5"></div>
-        <span class="inline-block text-white">เลื่อนลงเพื่อดูรายละเอียด</span>
+        <a href="#statistic">
+          <img src="/assets/down_icon.dfb3b14c.svg" alt="" class="w-10 h-10 mt-24 mb-5 animate-bounce">
+          <span class="inline-block text-white">เลื่อนลงเพื่อดูรายละเอียด</span>
+        </a>
       </div>
 
       <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_3bctaz0q.json" mode="bounce"
@@ -39,37 +64,63 @@
       </lottie-player>
     </div>
   </div>
-  <div class="py-[105px] bg-red-500">
-    <div class="max-w-7xl mx-auto">
-      <div class="flex space-x-7">
-        <div>
+  <div class="py-[105px] overflow-clip" id="statistic">
+    <div class="container relative">
+      <div class="flex space-x-7 relative">
+        <div class="group">
           <div class="relative h-24 flex justify-center">
-            <img src="/assets/Mascot l Polary.c936ba19.svg" class="absolute w-40 top-7">
+            <img src="/assets/Mascot l Polary.c936ba19.svg" class="absolute w-40 top-7 transition-all group-hover:top-0">
           </div>
-          <div class="rounded-xl card px-8 py-5 bg-white relative">
-            <div></div>
+          <div class="rounded-xl card px-8 py-5 z-10 bg-white relative">
+            <div class="relative inline-flex rounded-full h-4 w-4 bg-[#70FF00] float-right">
+              <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#70FF00] opacity-75"></span>
+            </div>
             <h1 class="text-5xl font-medium mb-6 leading-normal">2,800+</h1>
-            <h4 class="text-2xl font-medium text-primary leading-normal">จำนวนคนไข้และลูกค้าที่ดูแลทั้งหมดในระบบ</h4>
-            <p class="leading-normal">ปัจจุบัน Polary ได้รองรับคนไข้และลูกค้าสูงถึง 2,800 คน</p>
+            <h4 class="text-[22px] font-medium text-primary leading-normal mb-2">
+              จำนวนคนไข้และลูกค้าที่ดูแลทั้งหมดในระบบ
+            </h4>
+            <p class="leading-normal font-medium text-card-gray">ปัจจุบัน Polary ได้รองรับคนไข้และลูกค้าสูงถึง 2,800
+              คน
+            </p>
           </div>
         </div>
-        <div>
+        <div class="group">
           <div class="relative h-24 flex justify-center">
-            <img src="/assets/Mascot l Polary.c936ba19.svg" class="absolute w-40 top-7">
+            <img src="/assets/Mascot l Polary.c936ba19.svg" class="absolute w-40 top-7 transition-all group-hover:top-0">
           </div>
-          <div class="rounded-xl card px-8 py-5 bg-white relative">
-            <div></div>
+          <div class="rounded-xl card px-8 py-5 z-10 bg-white relative">
+            <div class="relative inline-flex rounded-full h-4 w-4 bg-[#70FF00] float-right">
+              <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#70FF00] opacity-75"></span>
+            </div>
             <h1 class="text-5xl font-medium mb-6 leading-normal">32+</h1>
-            <h4 class="text-2xl font-medium text-primary leading-normal">จำนวนคลีนิคที่ใช้บริการ Polary</h4>
-            <p class="leading-normal">ปัจจุบันบริการ Polary ได้รองรับคลีนิกจำนวน 32 แห่ง</p>
+            <h4 class="text-[22px] font-medium text-primary leading-normal mb-2">จำนวนคลีนิคที่ใช้บริการ Polary</h4>
+            <p class="leading-normal font-medium text-card-gray">ปัจจุบันบริการ Polary ได้รองรับคลีนิกจำนวน 32 แห่ง
+            </p>
           </div>
         </div>
-        <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_wplhmbxf.json" background="transparent"
-          speed="1" class="w-[260px] h-[260px] self-end" loop autoplay></lottie-player>
+        <div class="w-[216px] h-[260px] self-end  overflow-clip relative z-10">
+          <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_wplhmbxf.json" background="transparent"
+            speed="1" class="w-[260px] h-[260px] absolute -left-5" loop autoplay></lottie-player>
+        </div>
+
+        <svg class="absolute bottom-[19px] left-96 h-[4px] w-[500px]">
+          <path d="M3 2.2L657 2.8" stroke="black" stroke-width="4.2" stroke-linecap="square" />
+        </svg>
+        <svg class="absolute bottom-[18px] right-12" width=" 118" height="6" viewBox="0 0 118 6" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M3 3H115" stroke="url(#paint0_linear_164_728)" stroke-width="4.2" stroke-linecap="square" />
+          <defs>
+            <linearGradient id="paint0_linear_164_728" x1="9" y1="3" x2="117" y2="3" gradientUnits="userSpaceOnUse">
+              <stop />
+              <stop offset="1" stop-opacity="0" />
+            </linearGradient>
+          </defs>
+        </svg>
       </div>
+      <div class="w-80 h-80 rounded-full bg-[#1BD1D51A] absolute -bottom-3/4 right-10 blur-[100px]"></div>
     </div>
   </div>
-  <div class="section bg-section-gray mb-12">
+  <div class="section bg-section-gray mb-12" id="feature">
     <div class="container">
       <div class="feature split vertical">
         <div class="detail left">
@@ -145,11 +196,11 @@
   </div>
   <div class="section bg-section-light-gray mb-12 overflow-clip">
     <div class="container relative">
-      <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute -top-10">
-      <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute -bottom-8 left-28">
-      <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute bottom-1/2 left-1/3">
-      <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute -bottom-12 right-40">
-      <img src="/assets/snowflake.c34be485.svg" alt="" class="absolute -top-6 -right-6">
+      <img src="/assets/snowflake.7d3498c5.svg" alt="" class="absolute -top-10">
+      <img src="/assets/snowflake.7d3498c5.svg" alt="" class="absolute -bottom-8 left-28">
+      <img src="/assets/snowflake.7d3498c5.svg" alt="" class="absolute bottom-1/2 left-1/3">
+      <img src="/assets/snowflake.7d3498c5.svg" alt="" class="absolute -bottom-12 right-40">
+      <img src="/assets/snowflake.7d3498c5.svg" alt="" class="absolute -top-6 -right-6">
       <div class="feature split vertical pb-20 justify-center items-center relative">
         <div class="detail">
           <h1 class="title">มากกว่า 15 ฟีเจอร์บน Polary</h1>
@@ -163,20 +214,21 @@
     </div>
   </div>
   <div class="section bg-gradient-to-r from-gradient-light-green to-gradient-dark-green">
-    <div class="container">
+    <div class="container relative">
       <div class="feature pb-20">
         <div class="header">
           <h4 class="text-xl leading-normal font-medium text-white opacity-60">ภาพตัวอย่างโปรแกรม</h4>
         </div>
         <div class="w-12 h-px bg-white opacity-60 mt-8 mb-3"></div>
-        <div class="overflow-y-hidden overflow-x-auto flex scroll-smooth snap-x snap-mandatory">
-          <div class="split vertical min-w-full snap-start">
+        <div class="flex scroll-smooth snap-x snap-mandatory -mt-28 -mb-16 carousel overflow-x-clip">
+          <div class="split vertical min-w-full snap-start item">
             <div class="detail">
               <h1 class="title white">Polary หน้าสมาชิก</h1>
               <p class="description white">แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ Polary ทั้งหมด</p>
             </div>
-            <div class="relative">
-
+            <div class="flex-1 relative">
+              <img src="/assets/member_screenshot.c38ce711.png" alt="" class="mx-auto">
+              <img src="/assets/Mascot l Polary_1-5-03.13ea8fd7.svg" alt="" class="h-64 absolute -bottom-24 -left-8">
             </div>
           </div>
           <div class="split vertical min-w-full snap-start">
@@ -206,16 +258,24 @@
             </div>
           </div>
         </div>
+        <div class="flex space-x-10">
+          <div class="rounded-md w-2 h-6 bg-[#32DBDF]"></div>
+          <div class="rounded-md w-2 h-6 bg-[#D5E3E3]"></div>
+          <div class="rounded-md w-2 h-6 bg-[#D5E3E3]"></div>
+          <div class="rounded-md w-2 h-6 bg-[#D5E3E3]"></div>
+          <div class="rounded-md w-2 h-6 bg-[#D5E3E3]"></div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="section bg-section-light-gray overflow-clip">
+  <div class="section overflow-clip" id="price">
     <div class="container relative">
-      <div class="feature pb-20">
-        <div class="rounded-[14px] card divide-y divide-[#F1F1F1]">
-          <div class="split vertical justify-between py-11 px-14">
+      <div class="feature pb-20 split vertical">
+        <img src="/assets/Mascot l Polary_1-5-02.10e571c8.svg" alt="" class="h-96 -scale-x-[1] -mr-[120px]">
+        <div class="rounded-[14px] card flex-1 bg-white z-10 relative">
+          <div class="split vertical justify-between py-11 px-14 border-b border-[#F1F1F1]">
             <div class="price">
-              <span class="title">699</span>
+              <span class="title">899</span>
               <span class="unit">บาท/เดือน</span>
               <h3 class="description">ราคาเดียวครบทุกฟีเจอร์</h3>
             </div>
@@ -238,11 +298,14 @@
             <span class="w-1/3">รายงานบุคคลากร</span>
             <span class="w-1/3">เชื่อมต่อ API</span>
           </div>
+          <img src="/assets/snowflake_green.242142dd.svg" alt="" class="snowflake-green h-20 w-20 absolute -bottom-10 -right-10">
         </div>
       </div>
+      <div class="w-80 h-80 rounded-full bg-[#1BD1D51A] absolute -bottom-40 -right-40 blur-[100px]"></div>
+      <div class="w-80 h-80 rounded-full bg-[#1BD1D51A] absolute -top-16 -left-52 blur-[100px]"></div>
     </div>
   </div>
-  <div class="section bg-section-light-gray overflow-clip">
+  <div class="section bg-section-light-gray overflow-clip" id="contact">
     <div class="container split vertical">
       <div class="w-1/3 h-[671px]"></div>
       <div class="py-14 px-28 flex-1">
@@ -250,23 +313,28 @@
         <div class="space-y-3 mb-6">
           <div class="label">ชื่อ</div>
           <input type="text" name="" id=""
-            class="bg-white border border-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray">
+            class="bg-white ring-1 ring-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray caret-primary focus:outline-none focus:ring-2 focus:ring-primary">
         </div>
         <div class="space-y-3 mb-6">
           <div class="label">อีเมล์ติดต่อกลับ</div>
           <input type="email" name="" id=""
-            class="bg-white border border-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray">
+            class="bg-white ring-1 ring-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray caret-primary focus:outline-none focus:ring-2 focus:ring-primary">
         </div>
         <div class="space-y-3 mb-8">
           <div class="label">ข้อความ</div>
           <textarea name="" id="" cols="30" rows="10"
-            class="bg-white border border-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray"></textarea>
+            class="bg-white ring-1 ring-[#DDDDDD] rounded-lg px-[18px] py-3 text-base text-dark-gray caret-primary focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
         </div>
         <button class="filled button rounded primary w-52">ส่งข้อความ</button>
       </div>
     </div>
   </div>
-  <footer class="bg-[#303030] h-20"> </footer>
+  <footer class="bg-[#303030]">
+    <div class="container flex justify-between h-20 items-center">
+      <img src="/assets/polary_snowflake_logo.f9cd5f8f.svg" alt="Polary logo with green snowflake" class="py-5">
+      <div class="text-sm text-white font-medium">Copyright © 2022 Zarewoft Co.,Ltd. All rights reserved.</div>
+    </div>
+  </footer>
 </body>
 
 </html>
