(28) update privacy and terms

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
       defer
     ></script>
     
-    
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap");
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polary</title>
-    <script async type="module" crossorigin src="/assets/index.975209f9.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.fb4ad5c4.js">
-    <link rel="stylesheet" href="/assets/index.6ab76999.css">
+    <script async type="module" crossorigin src="/assets/index.e2d97807.js"></script>
+    <link rel="stylesheet" href="/assets/index.1d93e814.css">
   </head>
 
   <body>
@@ -638,7 +639,11 @@
           class="mb-3 h-6 md:mb-0 md:h-8 xl:h-9"
         />
         <div class="text-[0.6rem] font-medium text-white xl:text-sm">
-          Copyright © 2022 Zarewoft Co.,Ltd. All rights reserved.
+          <div class="mt-2 flex gap-10">
+            <a href="/terms.html"> เงื่อนไขการใช้บริการ </a>
+            <a href="/privacy.html"> นโยบายความเป็นส่วนตัว </a>
+            <span>Copyright © 2022 Zarewoft Co.,Ltd. All rights reserved.</span>
+          </div>
         </div>
       </div>
     </footer>
