--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polary</title>
-    <script async type="module" crossorigin src="/assets/index.e2d97807.js"></script>
-    <link rel="stylesheet" href="/assets/index.1d93e814.css">
+    <script async type="module" crossorigin src="/assets/index.63cb8d78.js"></script>
+    <link rel="stylesheet" href="/assets/style.5f83ec68.css">
   </head>
 
   <body>
@@ -640,8 +640,8 @@
         />
         <div class="text-[0.6rem] font-medium text-white xl:text-sm">
           <div class="mt-2 flex gap-10">
-            <a href="/terms.html"> เงื่อนไขการใช้บริการ </a>
-            <a href="/privacy.html"> นโยบายความเป็นส่วนตัว </a>
+            <a href="./terms.html"> เงื่อนไขการใช้บริการ </a>
+            <a href="./privacy.html"> นโยบายความเป็นส่วนตัว </a>
             <span>Copyright © 2022 Zarewoft Co.,Ltd. All rights reserved.</span>
           </div>
         </div>
