--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polary</title>
     <script async type="module" crossorigin src="/assets/index.63cb8d78.js"></script>
-    <link rel="stylesheet" href="/assets/style.3201f16d.css">
+    <link rel="stylesheet" href="/assets/style.90928946.css">
   </head>
 
   <body>
@@ -244,16 +244,16 @@
             </p>
           </div>
           <div
-            class="xl:max-h-auto relative aspect-video w-full sm:mt-6 md:max-h-[456px] xl:mt-0 xl:h-auto xl:w-auto"
+            class="xl:max-h-auto relative aspect-video w-full sm:mt-6 md:max-h-[400px] xl:mt-0 xl:h-auto xl:w-auto"
           >
             <img
-              src="/assets/Screenshot1.75b243a4.png"
+              src="/assets/member_profile_screenshot@2x.0d08815a.png"
               alt=""
-              srcset=""
-              class="absolute -right-12 bottom-0 max-h-full xl:static"
+              srcset="/assets/member_profile_screenshot.928277e6.png , /assets/member_profile_screenshot@2x.0d08815a.png 2x"
+              class="absolute -right-12 bottom-0 max-h-full xl:static xl:ml-auto"
             />
             <img
-              class="absolute top-1/2 left-6 h-2/3 -translate-y-1/2 lg:left-auto lg:right-1/3 xl:-left-20"
+              class="absolute top-1/2 left-9 h-2/3 -translate-y-1/2 lg:left-auto lg:right-1/3 xl:-left-20"
               srcset="/assets/member-card.4215073a.png , /assets/member-card@2x.1258ae9e.png 2x"
               src="/assets/member-card@2x.1258ae9e.png"
               alt=""
@@ -269,9 +269,9 @@
             class="xl:max-h-auto relative mb-6 aspect-video w-full md:max-h-[456px] xl:mb-0 xl:h-auto xl:w-auto"
           >
             <img
-              src="/assets/Screenshot2.6e6b36b0.png"
+              src="/assets/appointment_screenshot@2x.bb1c22c7.png"
               alt=""
-              srcset=""
+              srcset="/assets/appointment_screenshot.311d8c8b.png , /assets/appointment_screenshot@2x.bb1c22c7.png 2x"
               class="absolute -left-8 max-h-full xl:static xl:right-16 xl:top-0"
             />
             <img
@@ -449,17 +449,20 @@
                 <li class="glide__slide">
                   <div class="flex flex-col lg:flex-row">
                     <div class="screenshot-detail flex-1">
-                      <h2 class="h2 screenshot-title">Polary หน้าสมาชิก</h2>
+                      <h2 class="h2 screenshot-title">หน้าสมาชิก</h2>
                       <p class="h5 screenshot-description">
-                        แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ
+                        แสดงข้อมูลสมาชิก นัดหมาย ยอดค้างชำระ
+                        การรักษาต่อเนื่องที่มีอยู่
+                        บันทึกการรักษาและเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ
                         Polary ทั้งหมด
                       </p>
                     </div>
                     <div class="screenshot">
                       <img
-                        src="/assets/member_screenshot.c38ce711.png"
+                        src="/assets/member_profile_screenshot@2x.0d08815a.png"
                         alt=""
                         class=""
+                        srcset="/assets/member_profile_screenshot.928277e6.png , /assets/member_profile_screenshot@2x.0d08815a.png 2x"
                       />
                     </div>
                   </div>
@@ -467,17 +470,118 @@
                 <li class="glide__slide">
                   <div class="flex flex-col lg:flex-row">
                     <div class="screenshot-detail flex-1">
-                      <h2 class="h2 screenshot-title">Polary หน้าสมาชิก</h2>
+                      <h2 class="h2 screenshot-title">หน้านัดหมาย</h2>
                       <p class="h5 screenshot-description">
-                        แสดงข้อมูลสมาชิก และเป็นจุดเชื่อมต่อไปยังฟีเจอร์อื่นๆของ
-                        Polary ทั้งหมด
+                        แสดงปฏิทินนัดหมายทั้งในรูปแบบวันและเดือน
+                        สามารถเลือกดูนัดหมายของแต่ละคุณหมอ
+                        และสามารถเพิ่มนัดหมายได้อย่างรวดเร็ว
                       </p>
                     </div>
                     <div class="screenshot">
                       <img
-                        src="/assets/member_screenshot.c38ce711.png"
+                        src="/assets/appointment_screenshot@2x.bb1c22c7.png"
                         alt=""
                         class=""
+                        srcset="/assets/appointment_screenshot.311d8c8b.png , /assets/appointment_screenshot@2x.bb1c22c7.png 2x"
+                      />
+                    </div>
+                  </div>
+                </li>
+                <li class="glide__slide">
+                  <div class="flex flex-col lg:flex-row">
+                    <div class="screenshot-detail flex-1">
+                      <h2 class="h2 screenshot-title">
+                        หน้ารายการรักษาและสินค้า
+                      </h2>
+                      <p class="h5 screenshot-description">
+                        จัดการข้อมูลรายการรักษาและรายการสินค้าที่ให้บริการและจำหน่ายทั้งหมด
+                        สามารถค้นหาจากชื่อหรือแยกตามประเภทได้
+                      </p>
+                    </div>
+                    <div class="screenshot">
+                      <img
+                        src="/assets/product_screenshot@2x.98e94f87.png"
+                        alt=""
+                        class=""
+                        srcset="/assets/product_screenshot.dbc901e2.png , /assets/product_screenshot@2x.98e94f87.png 2x"
+                      />
+                    </div>
+                  </div>
+                </li>
+                <li class="glide__slide">
+                  <div class="flex flex-col lg:flex-row">
+                    <div class="screenshot-detail flex-1">
+                      <h2 class="h2 screenshot-title">หน้าพนักงาน</h2>
+                      <p class="h5 screenshot-description">
+                        จัดการข้อมูลพนักงานและคุณหมอได้จากหน้านี้
+                      </p>
+                    </div>
+                    <div class="screenshot">
+                      <img
+                        src="/assets/staff_screenshot@2x.82c5c42a.png"
+                        alt=""
+                        class=""
+                        srcset="/assets/staff_screenshot.09ad22a2.png , /assets/staff_screenshot@2x.82c5c42a.png 2x"
+                      />
+                    </div>
+                  </div>
+                </li>
+                <li class="glide__slide">
+                  <div class="flex flex-col lg:flex-row">
+                    <div class="screenshot-detail flex-1">
+                      <h2 class="h2 screenshot-title">หน้าชำระเงิน</h2>
+                      <p class="h5 screenshot-description">
+                        หน้าชำระเงินที่สามารถดึงข้อมูลการรักษาของลูกค้า
+                        หรือขายสินค้าหน้าร้านอื่นๆมาจำหน่ายได้
+                        และยังสามารถใส่ส่วนลดแต่ละรายการหรือส่วนลดรวมได้
+                      </p>
+                    </div>
+                    <div class="screenshot">
+                      <img
+                        src="/assets/pos_screenshot@2x.8e0f2526.png"
+                        alt=""
+                        class=""
+                        srcset="/assets/pos_screenshot.0ccd78c1.png , /assets/pos_screenshot@2x.8e0f2526.png 2x"
+                      />
+                    </div>
+                  </div>
+                </li>
+                <li class="glide__slide">
+                  <div class="flex flex-col lg:flex-row">
+                    <div class="screenshot-detail flex-1">
+                      <h2 class="h2 screenshot-title">หน้าสถิติและรายงาน</h2>
+                      <p class="h5 screenshot-description">
+                        Polary สามารถแสดงสถิติของร้านได้หลากหลายมุมมอง
+                        ทั้งสถิติของผู้มาใช้บริการ สถิติหัตถการ สถิติการขาย
+                        อีกทั้งยังสรุปรายงานของร้านตามประเภทและช่วงเวลาได้
+                      </p>
+                    </div>
+                    <div class="screenshot">
+                      <img
+                        src="/assets/member_statistic_screenshot@2x.23fd03f7.png"
+                        alt=""
+                        class=""
+                        srcset="/assets/member_statistic_screenshot.2352427b.png , /assets/member_statistic_screenshot@2x.23fd03f7.png 2x"
+                      />
+                    </div>
+                  </div>
+                </li>
+                <li class="glide__slide">
+                  <div class="flex flex-col lg:flex-row">
+                    <div class="screenshot-detail flex-1">
+                      <h2 class="h2 screenshot-title">หน้าค้นหาสมาชิก</h2>
+                      <p class="h5 screenshot-description">
+                        สามารถค้นหาสมาชิกจาก ชื่อ นามสกุล เบอร์โทรศัพท์
+                        เลขบัตรประชาชนและเลขทะเบียนคนไข้
+                        อีกทั้งยังรองรับการค้นหาจากเครื่องอ่านบัตรประชาชน
+                      </p>
+                    </div>
+                    <div class="screenshot">
+                      <img
+                        src="/assets/member_screenshot@2x.12890930.png"
+                        alt=""
+                        class=""
+                        srcset="/assets/member_screenshot.7efb3b49.png , /assets/member_screenshot@2x.12890930.png 2x"
                       />
                     </div>
                   </div>
@@ -490,6 +594,11 @@
             >
               <button class="glide__bullet" data-glide-dir="=0"></button>
               <button class="glide__bullet" data-glide-dir="=1"></button>
+              <button class="glide__bullet" data-glide-dir="=2"></button>
+              <button class="glide__bullet" data-glide-dir="=3"></button>
+              <button class="glide__bullet" data-glide-dir="=4"></button>
+              <button class="glide__bullet" data-glide-dir="=5"></button>
+              <button class="glide__bullet" data-glide-dir="=6"></button>
             </div>
           </div>
         </div>
